# chip8emu

./: .gitignore  CMakeLists.txt  LICENSE.txt  Readme.md
assets/: scr-settings
src/: CMakeLists.txt  emulator.cpp  emulator.h  emulatorfileloader.cpp  emulatorfileloader.h  emulatorsettings.cpp  emulatorsettings.h  emulatorsettingsfilemanager.cpp  emulatorsettingsfilemanager.h  emulatorstatus.cpp  emulatorstatus.h  emulatortimer.cpp  emulatortimer.h  filetoolargeexception.cpp  filetoolargeexception.h  gamerenderarea.cpp  gamerenderarea.h  idebuglistener.h  ierrorlistener.h  iiolistener.h  invalidkeyexception.cpp  invalidkeyexception.h  itimer.h  itimerlistener.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pcoutofboundsexception.cpp  pcoutofboundsexception.h  settings.json  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  unrecognizedopcodeexception.cpp  unrecognizedopcodeexception.h  util.cpp  util.h
tests/: CMakeLists.txt  instructionstest.cpp  instructionstest.h  listenermock.cpp  listenermock.h  main.cpp  observertest.cpp  observertest.h
